とりあえずprismaを使用することができた。
